修复producer shell的bug